2004-07-06  William Jon McCann  <mccann@jhu.edu>

	* src/events.cpp (set_cursor, set_cursor_by_location) 
	(bj_event_button_release, handle_slot_motion_event) 
	(handle_chip_stack_motion_event, make_cursor) 
	(bj_event_playing_area_configure): Use Callum's mouse
	cursor work from Aisleriot.

2004-06-08  William Jon McCann  <mccann@jhu.edu>

	* src/events.cpp (handle_other_motion_event): 
	* src/blackjack.cpp (main_prog):
	Use GtkStatusBar instead of deprecated GnomeAppBar.  Move
	information to left side to handle resize grip.

2004-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* card.cpp:
	* menu.cpp:
	* blackjack.cpp:
	* game.cpp:
	* player.cpp:
	* strategy.cpp: Rename locals to avoid warnings about
	shadowing. Generally I just prepended an l. Hopefully this
	hasn't introduced too many bugs.

2004-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* draw.cpp: Don't use a gc for drawing the chips. draw_gc
	was being used, but it's clipping rectangle is only for the
	cards -> invisible chips.

2004-06-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/Makefile.am: Remove gdk-card-image from the LDFLAGS.

2004-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/events.cpp: Fix compiler warnings.

2004-05-24  William Jon McCann  <mccann@jhu.edu>

	* src/blackjack.cpp (bj_gconf_card_style_cb): Instant
	apply card theme.

	* src/card.h (bj_card_set_theme): Add function prototype.

2004-05-20  William Jon McCann  <mccann@jhu.edu>

	* dialog.cpp (reset_button_cb, show_preferences_dialog):
	Add a button to reset the balance.

	* dialog.cpp (show_preferences_dialog): New preferences dialog
	that doesn't use a tabbed notebook.

	* dialog.cpp (get_insurance_choice, show_hint_dialog): 
	* game.cpp (bj_game_eval_installed_file): 
	Use gtk_message_dialog_new_with_markup and use HIG container
	spacing.

	* src/press_data.cpp (bj_chip_stack_press_data_generate): 
	* src/hand.cpp (bj_hand_split): 
	* src/game.cpp (bj_clear_table): 